[package]
name = "flaker"
version = "0.1.1"
authors = ["Jeremiah Peschka <jeremiah.peschka@gmail.com>"]
description = "A flake implementation for Rust. Flaker generates 128-bit ordered IDs that can be generated across multiple machines/processes but can be counted on to be lexically sortable."
repository = "https://github.com/peschkaj/flaker"
homepage = "https://github.com/peschkaj/flaker"
license = "Apache-2.0/MIT"

[dependencies]
time = "0.1"
num = "0.1.27"
byteorder = "0.3"